Bug 1318258 - Link libical and backend with libxul after binary components have been removed. r=aleth

MozReview-Commit-ID: 2fIa2mYxVTl